--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Euclidea 解题参考 by MathsFans</title>
+    <title>Euclidea</title>
     <link href="css/style.min.css" rel="stylesheet">
-    <link href="css/favicon.png" rel="shortcut icon">
+    <link rel="shortcut icon" href="stylesheets/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
@@ -54,12 +54,12 @@
         <a href="https://play.google.com/store/apps/details?id=com.hil_hk.euclidea" target="_blank">Google Play</a>,
         <a href="https://itunes.apple.com/zh/app/id927914361" target="_blank">App Store</a>
     </p>
-    <p>"Euclidea 解题参考" 由 MathsFans 团队维护<br>
+    <p>"Euclidea" MathsFans <br>
         <a href="https://github.com/tairraos" target="github">@Tairraos</a>,
         <a href="https://github.com/gsdevcn" target="github">@gsdevcn</a>,
         <a href="https://github.com/negiizhao" target="github">@negiizhao</a>
+        <a href="https://github.com/dgennetten" target="github">@dgennetten</a>
     </p>
-    <p>MathsFans Q群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=051f3c8f626fd3602a47c6400fa11010b03781a203e326105a4355705fb83539">527621502</a>。欢迎加群讨论和反馈问题，共同进步。</p>
 </footer>
 </body>
 <script src="js/jquery.min.js"></script>
