--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Euclidea</title>
     <link href="css/style.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="stylesheets/favicon.png">
+    <link rel="shortcut icon" href="v1/stylesheets/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
@@ -50,11 +50,11 @@
 <figure class="figure"></figure>
 <footer>
     <p>
-        <a href="http://www.euclidea.xyz/" target="_blank">游戏官网</a>,
+        <a href="http://www.euclidea.xyz/" target="_blank">euclidia.xyz</a>,
         <a href="https://play.google.com/store/apps/details?id=com.hil_hk.euclidea" target="_blank">Google Play</a>,
         <a href="https://itunes.apple.com/zh/app/id927914361" target="_blank">App Store</a>
     </p>
-    <p>"Euclidea" MathsFans <br>
+    <p>Euclidea MathsFans <br>
         <a href="https://github.com/tairraos" target="github">@Tairraos</a>,
         <a href="https://github.com/gsdevcn" target="github">@gsdevcn</a>,
         <a href="https://github.com/negiizhao" target="github">@negiizhao</a>
